crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@op_precedence__bit_math.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/op_precedence/bit_math.as
---
initializer:
  actions:
    - ConstantPool:
        - a
        - b
        - c
        - a=
        - ", b="
        - ", c="
        - "----"
        - "a & b = "
        - "a & b & c = "
        - "((a & b) & c) = "
        - "---"
        - "a ^ b = "
        - "a ^ b ^ c = "
        - "((a ^ b) ^ c) = "
        - "a | b = "
        - "a | b | c = "
        - "((a | b) | c) = "
        - "a & b ^ c = "
        - "((a & b) ^ c) = "
        - "a ^ b | c = "
        - "((a ^ b) | c) = "
    - Push:
        - Constant: 0
        - Integer: 12
    - DefineLocal
    - Push:
        - Constant: 1
        - Integer: 5
    - DefineLocal
    - Push:
        - Constant: 2
        - Integer: 3
    - DefineLocal
    - Push:
        - Constant: 3
        - Constant: 0
    - GetVariable
    - Add2
    - Push:
        - Constant: 4
    - Add2
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 5
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 6
    - Trace
    - Push:
        - Constant: 7
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Add2
    - Trace
    - Push:
        - Constant: 8
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Add2
    - Trace
    - Push:
        - Constant: 9
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 11
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 12
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 13
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 14
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 15
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 16
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 17
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 18
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 2
    - GetVariable
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 19
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 20
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitXor
    - Push:
        - Constant: 2
    - GetVariable
    - BitOr
    - Add2
    - Trace
  label_positions: {}
extra_modules: []
swf_version: 15
