crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@op_precedence__inc_dec.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/op_precedence/inc_dec.as
---
initializer:
  actions:
    - ConstantPool:
        - a
        - trc
        - msg
    - Push:
        - Constant: 0
        - Integer: 10
    - DefineLocal
    - Push:
        - Constant: 1
    - DefineFunction:
        name: ""
        params:
          - msg
        actions:
          actions:
            - Push:
                - Constant: 2
            - GetVariable
            - Trace
          label_positions: {}
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 0
        - Constant: 0
    - GetVariable
    - Increment
    - SetVariable
    - Push:
        - Integer: 1
        - Constant: 1
    - CallFunction
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 0
        - Constant: 0
    - GetVariable
    - Decrement
    - SetVariable
    - Push:
        - Integer: 1
        - Constant: 1
    - CallFunction
    - Pop
    - Push:
        - Constant: 0
        - Constant: 0
    - GetVariable
    - Increment
    - StoreRegister: 0
    - SetVariable
    - Push:
        - Register: 0
        - Integer: 1
        - Constant: 1
    - CallFunction
    - Pop
    - Push:
        - Constant: 0
        - Constant: 0
    - GetVariable
    - Decrement
    - StoreRegister: 0
    - SetVariable
    - Push:
        - Register: 0
        - Integer: 1
        - Constant: 1
    - CallFunction
    - Pop
  label_positions: {}
extra_modules: []
